SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository, snapshots and future releases.
===============================================================================================

Enhancements:

Updated the following Look and Feels to their latest versions:
  FlatLaf, Radiance, JTattoo, Nimrod, Kunstoff

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/53
  Aliases tree display:
  Alias folder icons now show if a folder is expanded or collapsed.
  New Alias icon was introduced.

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/50
  SQL result and table export to CSV or XML:
  New formatting option "Include grouping separator if configured in Global Preferences"
  which is applicable when the option "Use formatting as configured in Global Preferences" is used.
  See section "Formatting" near the bottom of the export dialog.

SQL result and table, sum display for numerical columns:
  The dialog opened by the "more ..." button now offers to show means and deviations of the selection.

SQL result and table export to CSV files:
  New info button behind the CSV radio button informs about the way the export handles
  values containing the separator character, line breaks, double quotes.

#433 | Pull request: https://github.com/squirrel-sql-client/squirrel-sql-code/pull/51
  To change the statement separator during SQL execution, use the following command on a separate line:
  --#SET TERMINATOR <separator>
  This command does not change the separator permanently but for a single SQL execution only.
  See also menu File --> New Session Properties --> tab SQL --> section "Statement separator"
  Thanks to Roland Tapken for the pull request

Find function in cell data popup and Object tree's text detail tabs:
  The "Mark all" toggle button now writes the number of occurrences to SQuirreL's message panel.

Introduced Java 23 compatibility.
