@@ -17,11 +17,11 @@ package net.sourceforge.squirrel_sql.client.session.mainpanel.objecttree.tabs;
  * License along with this library; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
-import java.awt.Component;
-
-import net.sourceforge.squirrel_sql.fw.sql.IDatabaseObjectInfo;
 
 import net.sourceforge.squirrel_sql.client.session.ISession;
+import net.sourceforge.squirrel_sql.fw.sql.IDatabaseObjectInfo;
+
+import java.awt.Component;
 /**
  * This interface defines the behaviour for a tab in one of the object panels.
  *
@@ -49,6 +49,8 @@ public interface IObjectTab
 	 * @return	The component to be displayed in the panel.
 	 */
 	Component getComponent();
+
+	Component getHeaderComponent();
 
 	/**
 	 * Set the current session.
