@@ -31,3 +31,7 @@ TablePriviligesTab.title=Privileges
 
 VersionColumnsTab.hint=Show columns that are automatically updated when the row is updated
 VersionColumnsTab.title=Versions
+
+
+ContentsTabHeaderController.rowsMessage=Rows {0}
+ContentsTabHeaderController.limitMessage=Limited to <font color='red'> {0} </font> rows
